# burrow

./: REQUIREMENTS.md  pyproject.toml
src/burrow/: cli.py  dispatch.py  models.py  preamble.py  tui.py
tests/: conftest.py  test_cli.py  test_dispatch.py  test_models.py  test_tui.py
tests/fixtures/: request.json  response.json
