[project]
name = "burrow"
version = "0.1.0"
description = "Terminal review tool for coding agent diffs"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.5",
]

[project.scripts]
burrow = "burrow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burrow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
]
