[project]
name = "burrow"
version = "0.1.0"
description = "Terminal review tool for coding agent diffs"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.5",
    "unidiff>=0.7.5",
    "watchfiles>=1.1.1",
]

[project.scripts]
burrow = "burrow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burrow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3.0",
]
